--- a/Slovak/main/MiuiSystemUIPlugin.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiuiSystemUIPlugin.apk/res/values-sk/strings.xml
@@ -288,4 +288,97 @@
     <string name="wireless_charging_tips_sub_message">Druhé zariadenie musí podporovať Qi bezdrôtové nabíjanie.</string>
     <string name="wireless_charging_tips_title">Reverzné bezdrôtové nabíjanie</string>
     <string name="yesterday">Včera</string>
+	
+	
+<string name="accessibility_airplane_mode">Lietadlo</string>
+    <string name="accessibility_brightness">Jas</string>
+    <string name="accessibility_detail_switch">Prepínanie medzi prepínačmi</string>
+    <string name="accessibility_detail_switch_disable">Nie je k dispozícii</string>
+    <string name="accessibility_detail_switch_off">Vypnúť</string>
+    <string name="accessibility_detail_switch_on">Zapnúť</string>
+    <string name="accessibility_expand_button">Viac</string>
+    <string name="accessibility_qs_edit_position_label">Pozícia %1$d. Dvojitým klepnutím vyberiete.</string>
+    <string name="accessibility_qs_edit_tile_added">%1$s je pridané na pozíciu %2$d</string>
+    <string name="accessibility_qs_edit_tile_moved">%1$s presunuté na pozíciu %2$d</string>
+    <string name="accessibility_qs_edit_tile_removed">%1$s je odstránený</string>
+    <string name="accessibility_settings">Nastavenia</string>
+    <string name="airplane_mode">Lietadlo</string>
+    <string name="auto_brightness_off">Automatický jas je vypnutý</string>
+    <string name="auto_brightness_on">Automatický jas je zapnutý</string>
+    <string name="auto_disable_screenbuttons_disable_toast_text">Navigačné tlačidlá sú vypnuté, dvojitým klepnutím na ľubovoľné tlačidlo ich znova zapnete.</string>
+    <string name="auto_disable_screenbuttons_enable_toast_text">Navigačné tlačidlá sú povolené</string>
+    <string name="bt_is_off">Bluetooth je vypnuté</string>
+    <string name="close_invisible_mode_dialog_cancel">Zrušiť</string>
+    <string name="close_invisible_mode_dialog_message">Mi Smart Play sa teraz nedá použiť. Ak chcete používať túto funkciu, vypnite režim inkognito v Nastaveniach.</string>
+    <string name="close_invisible_mode_dialog_ok">Nastavenia</string>
+    <string name="close_invisible_mode_dialog_title">Ste inkognito</string>
+<string name="control_center_notification_switch_guide">Potiahnutím prepnete medzi Ovládacím centrom a panelom upozornení</string>
+    <string name="drag_to_add_tiles">Stlačením a podržaním pridáte alebo zmeníte usporiadanie položiek</string>
+    <string name="mi_smart_hub_entry_title">Mi Smart Hub</string>
+    <string name="miui_screen_rotation_freeze_message">Zamknutá orientácia obrazovky v režime na šírku</string>
+    <string name="msim_set_sub_not_supported_phone_in_call">Nie je možné nastaviť počas hovoru</string>
+    <string name="qs_control_big_tile_state_closed">Vypnuté</string>
+    <string name="qs_control_big_tile_state_closing">Vypína sa…</string>
+    <string name="qs_control_big_tile_state_connected">Pripojené</string>
+    <string name="qs_control_big_tile_state_connecting">Pripája sa…</string>
+    <string name="qs_control_big_tile_state_disconnected">Nepripojené</string>
+    <string name="qs_control_big_tile_state_disconnecting">Odpája sa…</string>
+    <string name="qs_control_big_tile_state_opened">Zapnuté</string>
+    <string name="qs_control_big_tile_state_opening">Zapína sa…</string>
+    <string name="qs_control_big_tile_state_unavailable">Nie je k dispozícii</string>
+    <string name="qs_control_customize_other_tiles_title">Dostupné prepínače</string>
+    <string name="qs_control_customize_save_text">Hotovo</string>
+    <string name="qs_control_customize_sub_title">Presunutím pridaných prepínačov ich usporiadate</string>
+    <string name="qs_control_customize_title">Pridané prepínače</string>
+    <string name="qs_control_expand_detail_title">Moje údaje</string>
+    <string name="qs_control_header_tiles_title">Ovládacie centrum</string>
+    <string name="qs_customize_title">Upraviť</string>
+    <string name="qs_open_night_mode_alert_summary">Určité nastavenia zobrazenia nie sú kompatibilné s tmavým režimom. Po vypnutí tmavého režimu sa však obnovia.</string>
+<string name="quick_settings_autobrightness_label">Automatický jas</string>
+    <string name="quick_settings_batterysaver_label">Šetrič batérie</string>
+    <string name="quick_settings_bluetooth_detail_empty_text">K dispozícii nie sú žiadne spárované zariadenia</string>
+    <string name="quick_settings_bluetooth_label">Bluetooth</string>
+    <string name="quick_settings_cellular_detail_dialog_message_turnoff">Mobilné dáta (WCDMA/LTE) budú vypnuté. Ak nepoužívate Wi-Fi, už nebudete môcť používať aplikácie, ktoré vyžadujú dátové pripojenie. Odosielanie alebo prijímanie multimediálnych správ bude obmedzené.</string>
+    <string name="quick_settings_cellular_detail_dialog_message_turnon">Mobilné dáta budú zapnuté. Pripojenie k mobilným sieťam môže mať za následok dodatočné poplatky v závislosti od vášho operátora.</string>
+    <string name="quick_settings_cellular_detail_dialog_negative_button_cancel">Zrušiť</string>
+    <string name="quick_settings_cellular_detail_dialog_positive_button_ok">OK</string>
+    <string name="quick_settings_cellular_detail_dialog_positive_button_turnoff">Vypnúť</string>
+    <string name="quick_settings_cellular_detail_title">Mobilné dáta</string>
+    <string name="quick_settings_cellular_detail_unable_change">Nie je možné nastaviť počas hovoru</string>
+    <string name="quick_settings_circulate_workd_label">Mi Smart Hub</string>
+    <string name="quick_settings_drivemode_label">Režim auta</string>
+    <string name="quick_settings_edit_label">Upraviť</string>
+    <string name="quick_settings_extreme_batterysaver_label">Extrémny šetrič batérie</string>
+    <string name="quick_settings_flashlight_label">Svietidlo</string>
+    <string name="quick_settings_hotspot_label">Hotspot</string>
+    <string name="quick_settings_location_label">Poloha</string>
+    <string name="quick_settings_more_settings">Ďalšie nastavenia</string>
+    <string name="quick_settings_mute_label">Stlmiť</string>
+    <string name="quick_settings_nightmode_label">Tmavý režim</string>
+    <string name="quick_settings_papermode_label">Režim čítania</string>
+    <string name="quick_settings_powermode_label">Režim výkonu</string>
+    <string name="quick_settings_quietmode_label">Nerušiť</string>
+    <string name="quick_settings_rotationlock_label">Otáčanie</string>
+    <string name="quick_settings_screenbutton_label">Tlačidlá</string>
+    <string name="quick_settings_screenlock_label">Zámok</string>
+    <string name="quick_settings_screenshot_label">Screenshot</string>
+    <string name="quick_settings_sim_disabled">" (Zakázané)"</string>
+    <string name="quick_settings_sync_label">Synchronizovať</string>
+<string name="quick_settings_toast_drag_to_enable_custom_tile">Ak chcete pridať položku, stlačte a podržte ju a potom presuňte do hornej časti panela.</string>
+    <string name="quick_settings_vibrate_label">Vibrovať</string>
+    <string name="quick_settings_vowifi_label">Volanie cez WiFi</string>
+    <string name="quick_settings_vowifi_sim1_label">Volanie cez Wi-Fi SIM1</string>
+    <string name="quick_settings_vowifi_sim2_label">Volanie cez Wi-Fi SIM2</string>
+    <string name="quick_settings_wifi_detail_dual_wifi_accelerated">Zrýchliť</string>
+    <string name="quick_settings_wifi_detail_dual_wifi_switching_cancel">Zrušiť</string>
+    <string name="quick_settings_wifi_detail_dual_wifi_switching_confirm">Potvrdiť</string>
+    <string name="quick_settings_wifi_detail_dual_wifi_switching_not_remind">Už nezobrazovať</string>
+    <string name="quick_settings_wifi_detail_dual_wifi_switching_prompt">Prepínanie medzi sieťami</string>
+    <string name="quick_settings_wifi_detail_dual_wifi_switching_summary">Zvýšenie rýchlosti dvojpásmového pripojenia Wi-Fi vyžaduje použitie dvoch rôznych pásiem Wi-Fi. Ak sa pripojíte k inej hlavnej sieti, pomocné pripojenie sa stratí.</string>
+    <string name="quick_settings_wifi_detail_empty_text">Nie sú k dispozícii žiadne siete Wi-Fi</string>
+    <string name="quick_settings_wifi_label">Wi-Fi</string>
+    <string name="switch_bar_off">Vypnuté</string>
+    <string name="switch_bar_on">Zapnuté</string>
+    <string name="torch_high_temperature_warning">Vaše zariadenie je prehriate. Svietidlo nie je možné použiť.</string>
+    <string name="wifi_is_off">Wi-Fi je vypnutá</string>
 </resources>
