--- a/Slovak/main/MiuiSystemUI.apk/res/values-sk/strings.xml
+++ b/Slovak/main/MiuiSystemUI.apk/res/values-sk/strings.xml
@@ -2019,7 +2019,7 @@ Máte tiež aktívne pripojenie k sieti VPN, ktorá môže sledovať vašu akti
     <string name="quick_settings_rotation_locked_landscape_label">Na šírku</string>
     <string name="quick_settings_rotation_locked_portrait_label">Na výšku</string>
     <string name="quick_settings_rotation_unlocked_label">Otáčanie</string>
-    <string name="quick_settings_rotationlock_label">Otáčanie vypnuté</string>
+    <string name="quick_settings_rotationlock_label">Otáčanie</string>
     <string name="quick_settings_rssi_emergency_only">Len tiesňové volania</string>
     <string name="quick_settings_rssi_label">RSSI</string>
     <string name="quick_settings_screen_record_label">Záznam obrazovky</string>
