--- a/Slovak/main/ThemeManager.apk/res/values-sk/strings.xml
+++ b/Slovak/main/ThemeManager.apk/res/values-sk/strings.xml
@@ -1088,7 +1088,7 @@ ale obsah ktorý hľadáte nie je dostupný vo vašej krajine."</string>
     <string name="theme_component_title_all">Témy</string>
     <string name="theme_component_title_aod">AOD</string>
     <string name="theme_component_title_audio_effect">Audio efekty</string>
-    <string name="theme_component_title_boot_animation">Boot anim.</string>
+    <string name="theme_component_title_boot_animation">Boot animácia</string>
     <string name="theme_component_title_boot_audio">Boot Audio</string>
     <string name="theme_component_title_clock">Hodiny</string>
     <string name="theme_component_title_contact">Číselník</string>
